--- a/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
+++ b/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
@@ -38,7 +38,7 @@ const winner =
 console.log(`Iron Throne: ${winner}`)
 ```
 
-## !steps A Clash of Kings
+## !steps A Clash of Kingsb
 
 A Clash of Kings, the second book in the series, continues the epic saga. The Seven Kingdoms are plunged into war, with kings rising and falling. Meanwhile, Daenerys Targaryen seeks to return to Westeros with her growing dragons.
 
