--- a/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
+++ b/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
@@ -1,10 +1,10 @@
 <Hike as={Tutorial}>
 
-# !hero Building lists and navigation
+# !hero Creating and combining views
 
-With the basic landmark detail view set up, you need to provide a way for users to see the full list of landmarks, and to view the details about each location.
+This tutorial guides you through building _Landmarks_ — an app for discovering and sharing the places you love. You’ll start by building the view that shows a landmark’s details.
 
-You’ll create views that can show information about any landmark, and dynamically generate a scrolling list that a user can tap to see a detail view for a landmark. To fine-tune the UI, you’ll use Xcode to render previews at different device sizes.
+To lay out the views, Landmarks uses _stacks_ to combine and layer the image and text view components. To add a map to the view, you’ll include a standard MapKit component. As you refine the view’s design, Xcode provides real-time feedback so you can see how those changes translate into code.
 
 Download the project files to begin building this project, and follow the steps below.
 
