--- a/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
+++ b/clone-swiftui-tutorial/content/creating-and-combining-views/tutorial.mdx
@@ -8,7 +8,7 @@ To lay out the views, Landmarks uses _stacks_ to combine and layer the image and
 
 # !sections Create a new project and explore the canvas
 
-![!cover A screenshot of the editor and canvas, with the iPhone preview showing to the right.](02010H.png)
+![!cover A screenshot of the editor and canvas, with the iPhone preview showing to the right.](01010H.png)
 
 Create a new Xcode project that uses SwiftUI. Explore the canvas, previews, and the SwiftUI template code.
 
@@ -18,19 +18,19 @@ To preview and interact with views from the canvas in Xcode, and to use all the 
 
 Open Xcode and either click “Create New Project” in Xcode’s startup window, or choose File > New > Project.
 
-![!screenshot A screenshot of the editor and canvas, with the iPhone preview showing to the right.](02010H.png)
+![!screenshot A screenshot of the Xcode welcome screen. There are three options to choose from when you open Xcode: Create New Project, Clone Git Repository, and Open Existing Project. The first option is highlighted.](010101.png)
 
 ## !steps
 
 In the template selector, select iOS as the platform, select the App template, and then click Next.
 
-![!screenshot A screenshot of the editor and canvas, with the iPhone preview showing to the right.](02010H.png)
+![!screenshot A screenshot of the template selector sheet in Xcode. In the top row, iOS is selected as the platform. In the Application section, App is selected as the template. The Next button in the lower-right corner is highlighted.](010102.png)
 
 ## !steps
 
 Enter “Landmarks” as the product name, select “SwiftUI” for the interface and “Swift” for the language, and click Next. Choose a location to save the Landmarks project on your Mac.
 
-![!screenshot A screenshot of the editor and canvas, with the iPhone preview showing to the right.](02010H.png)
+![!screenshot A screenshot of the project sheet which shows the name Landmarks filled in for the Product Name. The interface is set to SwiftUI, and the language is set to Swift.](010103.png)
 
 ## !steps
 
