--- a/clone-shopify-api-reference/app/page.mdx
+++ b/clone-shopify-api-reference/app/page.mdx
@@ -1,8 +1,9 @@
-# Code Hike v1 starter
+# Shopify API Reference Clone
+
+Clone of [Shopify API Reference](https://shopify.dev/docs/api/admin-rest/2024-01/resources/order)
 
 Examples:
 
-- [/app/scrollycoding](/scrollycoding)
-- [/app/slideshow](/slideshow)
+- [/app/order](/order)
 
 For more information, check out [Code Hike v1 docs](https://v1.codehike.org/docs).
