--- a/with-nextra/pages/index.mdx
+++ b/with-nextra/pages/index.mdx
@@ -1,9 +1,20 @@
-import { Code } from "./code"
+# Nextra + Code Hike
 
-# Welcome to Nextra
+For more information, check out [Code Hike v1 docs](https://v1.codehike.org/docs).
 
-Hello, world!
+Codeblock example (from `./theme-config.jsx`):
 
-```js hey
-console.log(2)
+```js
+const lorem = ipsum(dolor, sit)
+// !callout[/amet/] This is a callout
+const [amet, consectetur] = [0, 0]
+lorem.adipiscing((sed, elit) => {
+  if (sed) {
+    amet += elit
+  }
+})
 ```
+
+Layout examples:
+
+- [/pages/scrollycoding](/scrollycoding)
