--- a/with-fumadocs/content/docs/index.mdx
+++ b/with-fumadocs/content/docs/index.mdx
@@ -1,9 +1,20 @@
 ---
-title: Fumadocs + Code Hike
+title: Intro
 description: Your first document
 ---
 
-Codeblock example (from `./components/code.tsx`):
+This is an example of a documentation site built with FumaDocs and Code Hike.
+
+The code for this website is in the [Code Hike examples repository](https://github.com/code-hike/examples/tree/main/with-fumadocs).
+
+Learn more:
+
+- [Code Hike docs](https://v1.codehike.org/docs)
+- [Fumadocs docs](https://fumadocs.vercel.app)
+
+## Demo
+
+[Codeblock](https://v1.codehike.org/docs/concepts/code) with [annotations](https://v1.codehike.org/docs/concepts/annotations) example (from `./components/code.tsx`):
 
 ```js
 const lorem = ipsum(dolor, sit)
