Use docusaurus v3.5 canary

--- a/with-docusaurus/docs/intro.mdx
+++ b/with-docusaurus/docs/intro.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 ---
 
+# Hello World
+
 For more information, check out [Code Hike v1 docs](https://v1.codehike.org/docs).
 
 ```js
