--- a/with-docusaurus/docs/intro.mdx
+++ b/with-docusaurus/docs/intro.mdx
@@ -2,9 +2,9 @@
 sidebar_position: 1
 ---
 
-# Hello World
+# Docusaurus + Code Hike
 
-For more information, check out [Code Hike v1 docs](https://v1.codehike.org/docs).
+For more information, check out [Code Hike docs](https://v1.codehike.org/docs).
 
 ```js
 const lorem = ipsum(dolor, sit)
